--- a/public/game.html
+++ b/public/game.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js"></script>
   <script>
     // ------- phaser painting -------- //
     class Example extends Phaser.Scene {
@@ -129,8 +130,7 @@
         this.physics.world.on('overlap', (gameObject1, gameObject2, body1, body2) => {
           if (!gameObject1.isFinished) {
             gameObject1.isFinished = true;
-
-            console.log(`OVERLAP: ${gameObject1.playerId} collided`);
+            console.log("OVERLAP:", gameObject1);
             this.socket.send(JSON.stringify({
               type: "finish",
               data: {
@@ -138,7 +138,13 @@
               }
             }));
 
-            this.declareWinner(gameObject1.playerId);
+            this.declareWinner(gameObject1.name);
+            gameObject1.visible = false;
+            confetti({
+              particleCount: 100,
+              spread: 30,
+              origin: { x: (gameObject1.x + 80)/1280, y: gameObject1.y/700 }
+            });
           }
         });
 
@@ -195,7 +201,7 @@
 
       // TODO: some text box thingy
       declareWinner(name) {
-        const text = this.add.text(800, 250, `hardcode is safe!`, {
+        const text = this.add.text(800, 250, `${name} is safe!`, {
           fontSize: '20px',
           color: '#000',
         });
