--- a/public/game.html
+++ b/public/game.html
@@ -58,7 +58,7 @@
             countdownLabel.destroy();
             countdownDigit.destroy();
 
-            this.newGame(nextNoseLocation);
+            this.handleNewGame(nextNoseLocation);
           }
         };
 
@@ -66,7 +66,7 @@
 
       }
 
-      newGame(noseLocation) {
+      handleNewGame(noseLocation) {
         // TODO: re-enable all players (w/ jitter?)
 
         // render the new nose
