fixed spawning in game loop

--- a/public/game.html
+++ b/public/game.html
@@ -80,6 +80,7 @@
         }));
         for (const [_, playerContainer] of Object.entries(this.playerInstances)) {
           playerContainer.visible = true;
+          playerContainer.isFinished = false;
         }
 
 
