--- a/public/player.html
+++ b/public/player.html
@@ -74,6 +74,7 @@
   // every x ms, send direction vector update
   const onTick = () => {
     if (direction.x || direction.y) {
+      console.log(direction);
       socket.send(JSON.stringify({ type: "move", data: { direction } }));
     }
     setTimeout(onTick, CONFIG.refreshRateMS);
